--- a/src/OrmDemo/Views/Home/Index.cshtml
+++ b/src/OrmDemo/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     <div class="col-md-6">
         <h2>View Records</h2>
         <ul>
-            <li><a href="#">View existing contacts</a>
+            <li><a href="/Contacts/Index">View existing contacts</a>
         </ul>
     </div>
     <div class="col-md-6">
