--- a/src/OrmDemo/Views/Home/Index.cshtml
+++ b/src/OrmDemo/Views/Home/Index.cshtml
@@ -14,9 +14,7 @@
                 <div class="carousel-caption">
                     <p>
                         Welcome to ORM demo using 
-                        <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                            Drapper
-                        </a>
+                            Massive Orm
                     </p>
                 </div>
             </div>
@@ -44,7 +42,7 @@
     <div class="col-md-6">
         <h2>Add New Record</h2>
         <ul>
-            <li><a href="/Contacts/Add">Add a new contact</a></li>
+            <li><a href="/Contacts/Edit">Add a new contact</a></li>
         </ul>
     </div>
 </div>
