--- a/src/OrmDemo/Views/Contacts/Edit.cshtml
+++ b/src/OrmDemo/Views/Contacts/Edit.cshtml
@@ -8,9 +8,9 @@
 @using (Html.BeginForm("Add", "Contacts", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
-    @Html.Partial("_OperationResult");
     @Html.ValidationSummary(true)
     <div class="form-group">
+        @Html.HiddenFor(model => model.Id)
         <div class="col-sm-2">
             @Html.LabelFor(model => model.Name)
         </div>
