--- a/src/OrmDemo/Views/Contacts/Index.cshtml
+++ b/src/OrmDemo/Views/Contacts/Index.cshtml
@@ -1,7 +1,25 @@
 ﻿@model IEnumerable<OrmDemo.Models.Contact>
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    // ViewBag.Title = "Home Page";
+
+<h2>View Contacts</h2>
+
+<div class="row">
+    <div class="col-md-1">&nbsp;</div>
+    <div class="col-md-1 text-center">Id</div>
+    <div class="col-md-3">Name</div>
+    <div class="col-md-2">Date of Birth</div>
+    <div class="col-md-2">Phone</div>
+    <div class="col-md-3">Actions</div>
+    </div>
+@foreach (var contact in Model)
+{
+        <div class="col-md-1">&nbsp;</div>
+        <div class="col-md-1 text-center">@contact.Id</div>
+        <div class="col-md-3">@contact.Name</div>
+        <div class="col-md-2">@contact.Dob.ToShortDateString()</div>
+        <div class="col-md-2">@contact.Phone</div>
+        <div class="col-md-3">
+            <a href="/Contacts/Edit/@contact.Id">Edit</a>
+            <a href="/Contacts/Remove/@contact.Id">Remove</a>
+        </div>
 }
+</div>
